--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
-    <script type="text/javascript" src="./game.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
     <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
