New enemy animation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
+    <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.
+    <br/>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
+    </div>
 
     <canvas id="gameWorld" width="1000" height="1000" style="border: 1px solid brown; background: white"></canvas>
 </body>
