--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <br/>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
     </div>
 
-    <canvas id="gameWorld" width="1000" height="1000" style="border: 1px solid brown; background: white"></canvas>
+    <canvas id="gameWorld" width="2000" height="1000" style="border: 1px solid brown; background: lightblue"></canvas>
 </body>
 </html>
