--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
+
     <!-- <script type="text/javascript" src="./config.js"></script> -->
     <script type="text/javascript" src="./main.js"></script>
 
@@ -17,6 +19,6 @@
     <br/>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
     </div>
 
-    <canvas id="gameWorld" width="1000" height="1000" style="border: 1px solid brown; background: white"></canvas>
+    <canvas id="gameWorld" width="2000" height="1000" style="border: 1px solid brown; background: lightblue"></canvas>
 </body>
 </html>
