--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- <script type="text/javascript" src="./main.js"></script> -->
 </head>
 <body>
-    <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.
-    <br/>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
+    <div>
+    <br/>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 'E' to fire your gun, and 'R' and 'F' to swing your sword.
     </div>
 
     <canvas id="gameWorld" width="2000" height="1000" style="border: 1px solid brown; background: lightblue"></canvas>
