--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div>
-    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. Press 'E' to fire your gun, and 'R' and 'F' to swing your sword. 
+    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. Press '1' to fire your gun, and '5' and '6' to swing your sword. 
     <p>Holding 'W' while shooting or slashing will use energy for a more powerful version.
     <p>
     </div>
