My friend the crow
Crow will follow you around the map. Your friend in the sky. For now.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <div>
-    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. Press '1' to fire your gun, and '5' and '6' to swing your sword. 
+    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
+    <p>Press numpad key '1' to fire your gun, and '5' and '6' to swing your sword. 
     <p>Holding 'W' while shooting or slashing will use energy for a more powerful version.
     <p>
     </div>
