--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 </head>
 <body>
     <div>
-    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. 
-    <p>Press numpad key '1' to fire your gun, and '5' and '6' to swing your sword. 
-    <p>Holding 'W' while shooting or slashing will use energy for a more powerful version.
-    <p>
+    <p>INSTRUCTIONS: Use the 'A' key to move left. Use the 'D' key to move right. Press the spacebar to jump. Can you use it twice?
+    <p>Press numpad key '1' to fire your gun, '2' to dash, '5' to slash, and '6' to cleave. 
+    <P>Dash has a brief window of invulnerability. Use it wisely!
+    <p>Holding 'W' while shooting or slashing will use energy for a more powerful version: Dash costs 1 energy. Energized Shot costs 2 energy. Energized Slash costs 4 (this is your get out of jail free card!).
+    <P>Everything has a counter! Try stuff out! Press F5 when you die. (Make sure you have a working F5).
+    <P>***HINTS/SPOILERS*** 
+    <P>***HINTS/SPOILERS*** Crows require two hits from anything to kill. Dino's energy balls can be destroyed by shooting them. Soldier's bullets take 3 shots to destroy, but a single slash will finish them off nice and quick.  You won't do damage to Soldier if you attack his shield. Find another way!
+    <P>***HINTS/SPOILERS***
+    <P>KILL ALL THE ENEMIES FOR A SENSE OF PRIDE AND ACCOMPLISHMENT!!!
     </div>
 
     <canvas id="gameWorld" width="2000" height="1000" style="border: 1px solid brown; background: lightblue"></canvas>
