--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <title>Game Project Shell</title>
 
+
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
 
     <!-- <script type="text/javascript" src="./config.js"></script> -->
     <script type="text/javascript" src="./main.js"></script>
 
-
+    <link rel="stylesheet" href="./index.css">
 
     <!-- <script type="text/javascript" src="./main.js"></script> -->
 </head>
@@ -28,6 +30,6 @@
     <P>KILL ALL THE ENEMIES FOR A SENSE OF PRIDE AND ACCOMPLISHMENT!!!
     </div>
 
-    <canvas id="gameWorld" width="2000" height="1200" style="border: 1px solid brown;"></canvas>
+    <canvas id="gameWorld" width=2000 height=1000></canvas>
 </body>
 </html>
