Readme link above game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <div>
 
+        Please visit https://github.com/GreenFour/pencil-knight/blob/master/README.md for instructions!
+
     </div>
 
     <canvas id="gameWorld" width=2500 height=1200></canvas>
