--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         Please visit https://github.com/GreenFour/pencil-knight/blob/master/README.md for instructions!
 
+        <P>***PRESS ENTER TO PAUSE AND VIEW CONTROLS***</P>
+
     </div>
 
     <canvas id="gameWorld" width=2500 height=1200></canvas>
