--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
     
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script> -->
     <script type="text/javascript" src="./main.js"></script>
     <link rel="stylesheet" href="./index.css">
 
