Adds correct versions of babel. Not working.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script> -->
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
     <link rel="stylesheet" href="./index.css">
 
     <!-- <script type="text/javascript" src="./main.js"></script> -->
